--- a/build-js-for-siteA-and-siteB/package.json
+++ b/build-js-for-siteA-and-siteB/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Build_JS",
+  "name": "Build_JS_for_siteA_and_siteB",
   "version": "0.0.0",
   "description": "Sample",
   "main": "",
